# wiiu-file-bug-example

./: CMakeLists.txt  main.cpp
